--- a/styles/style.css
+++ b/styles/style.css
@@ -19,8 +19,12 @@
 
 header {
     background-color: #FFF8F3;
+  
+    background: url("../images/developer.png") , url("../images/header_bg.png") , #FFF8F3;
+    background-position: top left , bottom right;
+    background-repeat: no-repeat;
     padding-top: 40px;
-    /* width: 200px; */
+    
 }
 .btn{
   background-color: #FD6E0A;
@@ -30,6 +34,7 @@ header {
   font-size: 20px;
   font-weight: bold;
   color: white;
+  cursor: pointer;
 }
 nav{
     width: 71%;
@@ -49,4 +54,38 @@ nav .menu a{
   font-size: 20px;
   color: #474747;
   text-decoration: none;
+}
+#banner .banner-contant {
+  max-width: 585px;
+}
+#banner{
+  margin: 47px 38px 0 230px;
+  display: flex;
+  align-items: center;
+}
+
+}
+
+#banner .banner-contant h2{
+  font-size: 45px;
+  font-weight: 600px;
+  color: #474747;
+  margin-bottom: 5px;
+
+}
+#banner .banner-contant h1{
+  font-size: 85px;
+  font-weight: bold;
+  color: black;
+  margin-bottom: 20px;
+}
+#banner .banner-contant p{
+  font-size: 18px;
+  color: #757575;
+  line-height: 30px;
+  margin-bottom: 30px;
+}
+#banner .banner-image img {
+  max-width: 584px;
+  vertical-align: middle;
 }
