--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,26 @@ header {
   color: white;
   cursor: pointer;
 }
+
+.section-heading {
+  max-width: 827px;
+  text-align: center;
+}
+.section-heading h2{
+  font-size: 35px;
+  font-weight: bold;
+  color: #181818;
+  margin-bottom: 30px;
+}
+
+.section-heading p{
+  font-size: 18px;
+  line-height: 30px;
+  margin-bottom: 30px;
+  color: #757575;
+}
+
+
 nav{
     width: 71%;
     max-width: 1140px;
@@ -88,4 +108,32 @@ nav .menu a{
 #banner .banner-image img {
   max-width: 584px;
   vertical-align: middle;
+}
+#about{
+  padding-top: 130px;
+}
+#about .about-contant{
+  width: 71%;
+  max-width: 1140px;
+  margin: 0 auto;
+  text-align: center;
+  background-color: #FFF8F3;
+  padding: 131px 156px;
+}
+
+#about .about-contant .about-info {
+  display: flex;
+  justify-content: space-around;
+}
+
+.about-info .info-card p{
+  font-size: 20px;
+  line-height: 30px;
+  color: #757575;
+
+}
+.about-info .info-card h4{
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 30px;
 }
