--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,7 @@ header {
 .section-heading {
   max-width: 827px;
   text-align: center;
+  margin: 0 auto;
 }
 .section-heading h2{
   font-size: 35px;
@@ -136,4 +137,40 @@ nav .menu a{
   font-size: 20px;
   font-weight: bold;
   line-height: 30px;
+}
+
+#skills{
+  padding-top: 130px;
+
+}
+#skills .skills-container{
+  width: 71%;
+  max-width: 1110px;
+  margin: 0 auto;
+}
+
+#skills .skills-container .skill-box {
+  display: flex;
+  gap: 24px;
+}
+.skill-box .skill-card{
+  padding: 30px;
+  box-shadow: 0 6px 50px 0 #00000016;
+  max-width: 267px;
+
+}
+.skill-card img{
+  max-width: 44px;
+  margin-bottom: 30px;
+}
+.skill-card h3{
+  font-weight: 20px;
+  font-weight: bold;
+  color: #181818;
+  margin-bottom: 20px;
+}
+.skill-card p{
+  font-size: 16px;
+  line-height: 28px;
+  color: #757575;
 }
