--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ header {
     background-color: #FFF8F3;
   
     background: url("../images/developer.png") , url("../images/header_bg.png") , #FFF8F3;
-    background-position: top left , bottom right;
+    background-position: 23px 38px , bottom right;
     background-repeat: no-repeat;
     padding-top: 40px;
     
@@ -55,6 +55,9 @@ header {
   margin-bottom: 30px;
   color: #757575;
 }
+.btn-center{
+  text-align: center;
+}
 
 
 nav{
@@ -85,7 +88,7 @@ nav .menu a{
   align-items: center;
 }
 
-}
+
 
 #banner .banner-contant h2{
   font-size: 45px;
@@ -110,7 +113,9 @@ nav .menu a{
   max-width: 584px;
   vertical-align: middle;
 }
-#about{
+#about ,
+#skills ,
+#resume{
   padding-top: 130px;
 }
 #about .about-contant{
@@ -139,10 +144,9 @@ nav .menu a{
   line-height: 30px;
 }
 
-#skills{
-  padding-top: 130px;
 
-}
+
+
 #skills .skills-container{
   width: 71%;
   max-width: 1110px;
@@ -172,5 +176,87 @@ nav .menu a{
 .skill-card p{
   font-size: 16px;
   line-height: 28px;
+  color: #757575;
+}
+#resume .resume-container{
+  width: 71%;
+  max-width: 1140px;
+  margin: 113px auto 0;
+  display: flex;
+  gap: 24px;
+}
+.resume-container hr{
+  margin: 30px 0;
+}
+
+.resume-container .section-title{
+  font-size: 30px;
+  color: #474747;
+  margin-bottom: 30px;
+}
+.resume-card{
+  max-width: 511px;
+  margin-right: 47px;
+}
+.resume-card .card-title{
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #474747;
+}
+.resume-card .card-info{
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: #757575;
+}
+.resume-card .card-text{
+  font-size: 16px;
+  line-height: 28px;
+  color: #757575;
+}
+
+footer{
+  margin-top: 130px;
+  background-color: #FFF8F3;
+  padding: 130px 0;
+}
+footer .footer-container{
+  width: 71%;
+  max-width: 1140px;
+  margin: 0 auto;
+  display: flex;
+  gap: 116px;
+}
+
+.footer-container .social{
+  max-width: 562px;
+}
+
+.footer-container .social p{
+  font-size: 16px;
+  line-height: 28px;
+  color: #474747;
+   margin-bottom: 3%;
+}
+
+
+.footer-container h2{
+  font-size: 35px;
+  font-weight: bold;
+  color: #181818;
+  margin-bottom: 20px;
+}
+.footer-container .icon a{
+  margin-right: 24px;
+}
+
+.footer-container form input[type="text"],
+.footer-container form textarea {
+  width: 461px;
+  padding: 18px 31px;
+  margin-bottom: 24px;
+  border: none;
+  border-radius: 5px;
   color: #757575;
 }
